# url-lookup-service

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.specify/memory/: constitution.md
data/malware_lists/: sample_malware.csv
postman/collections/: url-lookup-service.postman_collection.json
specs/001-malware-url-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-malware-url-detection/checklists/: requirements.md
specs/001-malware-url-detection/contracts/: urlinfo.md
src/: __init__.py  config.py  main.py
src/api/: urlinfo.py
src/models/: malware_db.py  url_check.py
src/services/: malware_checker.py  url_validator.py
src/services/database_loaders/: __init__.py  base.py  file_loader.py  http_loader.py
src/utils/: __init__.py  cache.py  logging.py  metrics.py
tests/: conftest.py
tests/contract/: test_performance_contract.py  test_urlinfo_contract.py  test_urlinfo_validation.py
tests/fixtures/: __init__.py  sample_malware_urls.csv  sample_malware_urls.json
tests/integration/: test_malware_detection.py  test_performance_benchmarks.py  test_validation_workflow.py
tests/unit/: test_cache_performance.py  test_url_validator.py
